addimg more api and fix bugs
